k8s/ingress/finances-app-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: finances-ui
  namespace: finances-app
spec:
  selector:
    app: finances-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  # Add a nodePort for external access
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: finances-api
  namespace: finances-app
spec:
  selector:
    app: finances-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30000  # Add a nodePort for external access
  type: NodePort
