k8s/ingress/homeassistant-external-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
      nodePort: 31000  # Choose a unique nodePort
  type: NodePort
