k8s/ingress/homeassistant-internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: pi.elk-magellanic.ts.net
    http:
      paths:
      - path: /homeassistant
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              number: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: ingress
spec:
  type: ExternalName
  externalName: homeassistant.homeassistant.svc.cluster.local
  ports:
  - port: 8123
    targetPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-shared
  namespace: shared
spec:
  type: ExternalName
  externalName: homeassistant.homeassistant.svc.cluster.local
  ports:
  - port: 8123
    targetPort: 8123
    protocol: TCP
